--- a/doc/license.conf
+++ b/doc/license.conf
@@ -1,14 +1,11 @@
 {
-  "project": "Meresco Normalize",
-  "description": "Meresco Normalize is an open-source library containing normalization\ncomponents for use with Meresco",
-  "license": "GPLv2",
-  "copyrights": [
-    {
-      "name": "Seecr (Seek You Too B.V.)",
-      "url": "http://seecr.nl",
-      "years": [
-        2013
-      ]
-    }
-  ]
+    "project": "Meresco Normalize",
+    "description": "Meresco Normalize is an open-source library containing normalization\ncomponents for use with Meresco",
+    "license": "GPLv2",
+    "copyrights": [
+        { "name": "Seecr (Seek You Too B.V.)", "url": "http://seecr.nl" }
+    ],
+    "copyrights_unused": [
+        {"name": "SURFmarket", "url": "https://surf.nl"}
+    ]
 }
