TJ: fill a date value to a full ZuluTime date using 2 strategies.

--- a/doc/license.conf
+++ b/doc/license.conf
@@ -3,9 +3,10 @@
     "description": "Meresco Normalize is an open-source library containing normalization\ncomponents for use with Meresco",
     "license": "GPLv2",
     "copyrights": [
-        { "name": "Seecr (Seek You Too B.V.)", "url": "http://seecr.nl" }
+        { "name": "Seecr (Seek You Too B.V.)", "url": "https://seecr.nl" }
     ],
     "copyrights_unused": [
-        {"name": "SURFmarket", "url": "https://surf.nl"}
+        {"name": "SURFmarket", "url": "https://surf.nl"},
+        {"name": "Stichting Kennisnet", "url": "https://www.kennisnet.nl"}
     ]
 }
