TJ: license, new setup.py.

--- a/doc/license.conf
+++ b/doc/license.conf
@@ -2,11 +2,11 @@
     "project": "Meresco Normalize",
     "description": "Meresco Normalize is an open-source library containing normalization\ncomponents for use with Meresco",
     "license": "GPLv2",
-    "copyrights": [
-        { "name": "Seecr (Seek You Too B.V.)", "url": "https://seecr.nl" }
-    ],
-    "copyrights_unused": [
-        {"name": "SURFmarket", "url": "https://surf.nl"},
-        {"name": "Stichting Kennisnet", "url": "https://www.kennisnet.nl"}
-    ]
+    "copyrights": {
+        "seecr": {"name": "Seecr (Seek You Too B.V.)", "url": "https://seecr.nl"},
+        "surf": {"name": "SURF", "url": "https://www.surf.nl"},
+        "beng": {"name": "The Netherlands Institute for Sound and Vision", "url": "https://beeldengeluid.nl"},
+        "kennisnet": {"name": "Stichting Kennisnet", "url": "https://www.kennisnet.nl"},
+        "knaw": {"name": "Data Archiving and Network Services", "url": "https://dans.knaw.nl"}
+    }
 }
